examples/invalid/invalid_try_context.fg
fn parse_num() -> Int!:
    fail "boom"

fn main():
    parse_num()!
